objects/Forecasting_Historical_Data__c.object
<CustomObject>
    <description>Used for Einstein Analytics</description>
    <fields>
        <fullName>AmountWithoutManagerAdjustment__c</fullName>
        <label>AmountWithoutManagerAdjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ForecastAmount__c</fullName>
        <label>ForecastAmount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>ParentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Forecasting Historical Data</label>
    <nameField>
        <displayFormat>FHD-{000000}</displayFormat>
        <label>Forecasting Historical Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasting Historical Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>